# BionicSX2

./: .gitmodules  AGENTS.md  CMakeLists.txt  bionicSX2
.github/workflows/: build-ipa.yml
cmake/: FindGameController.cmake  FindUIKit.cmake  FindZstd.cmake  ios.toolchain.cmake
ios/: ExportOptions.plist  Info.plist
ios-deps/install/include/: plutosvg.h  plutovg.h
ios-deps/install/include/webp/: decode.h  encode.h
ios/entitlements/: BionicSX2.entitlements
ios/platform/: AppStubs.mm  AudioStream_iOS.mm  BionicSX2Shared.h  CStubs.c  CocoaTools_iOS.mm  Filesystem_iOS.h  Filesystem_iOS.mm  FmtLogStubs.cpp  GSDrawScanlineStub.s  HostSys_iOS.cpp  Host_iOS.mm  Image_iOS.cpp  MissingSymbols.mm  PCSX2Stubs.cpp  PCSX2Stubs.mm  PCSX2StubsCpp.mm  PageFaultHandler.cpp  SymbolStubs.cpp  Threading_iOS.cpp  VtlbStub.c  VtlbStub.cpp  iOSHost.mm  iOSVMManager.h  iOSVMManager.mm
ios/ui/: AppDelegate.mm  BionicSX2App.swift  BionicSX2Bridge.h  BionicSX2Bridge.mm  ContentView.swift  GameControllerManager.swift  LogOverlay.h  LogOverlay.mm  MetalViewController.h  MetalViewController.mm  MetalViewController.swift  SceneDelegate.swift  main.mm
metal/: FrameSync.mm  MRCHelpers.h  MetalDeviceInfo.mm  MetalRenderer.h  MetalRenderer.mm  MetalSharedHeader.h  MetalTexture.mm  Shaders.metal
scripts/: build_bionicsx2.sh  build_ios_deps.sh  patch_debug_tracing.py
